--- a/src/components/LotroApp.scss
+++ b/src/components/LotroApp.scss
@@ -8,3 +8,14 @@
 .page-title{
   // font-family: lotro;
 }
+
+.github a {
+  position:sticky;
+  bottom: 5px;
+  justify-content: center;
+}
+
+.github-svg{
+  width: 64px;
+  // height: 64px;
+}
