--- a/src/components/DeedPanel.scss
+++ b/src/components/DeedPanel.scss
@@ -108,6 +108,12 @@
   bottom: 7px;
 }
 
+.completed{
+  // border: 2px solid #28a745;
+  box-shadow: 0 0 6px rgba(40, 167, 69, 1), 0 2px 8px rgba(19,82,34,.24), 0 4px 10px rgba(19,82,34,.48);
+  background-color: rgb(228, 247, 182);
+}
+
 @supports (display: grid) {
   @media screen and (min-width: $medium) {
 
