--- a/src/components/LotroApp.css
+++ b/src/components/LotroApp.css
@@ -1,5 +1,5 @@
 .panel {
-  margin: 10px;
+  margin: 10px 0px;
   background-color: white;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   padding: 5px; }
@@ -74,10 +74,12 @@ input[type="file"] {
   /* Black w/ opacity */ }
 
 .modal-content {
+  position: fixed;
   background-color: white;
-  margin: 15% auto;
   padding: 20px;
-  width: 80%;
+  width: 100%;
+  left: 0;
+  top: 15%;
   outline: none; }
 
 @media screen and (min-width: 576px) {
@@ -86,6 +88,7 @@ input[type="file"] {
     margin: 15% auto;
     padding: 20px;
     width: 400px;
+    left: calc((98% - 400px)/2);
     outline: none; } }
 
 .pull-right {
@@ -93,20 +96,25 @@ input[type="file"] {
 
 @supports (display: grid) {
   @media screen and (min-width: 576px) {
+    .panel {
+      margin: 0px; }
     .site {
       display: grid;
+      grid-gap: 10px;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto;
       grid-template-areas: "character character" "summary summary" "deed deed"; } }
   @media screen and (min-width: 768px) {
     .site {
       display: grid;
+      grid-gap: 15px;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto;
       grid-template-areas: "character summary" "deed deed"; } }
   @media screen and (min-width: 1024px) {
     .site {
       display: grid;
+      grid-gap: 20px;
       grid-template-columns: 1.4fr 1fr;
       grid-template-rows: auto;
       grid-template-areas: "character summary" "deed deed"; } } }
@@ -115,12 +123,78 @@ input[type="file"] {
   text-align: center;
   color: rgba(58, 58, 58, 0.788); }
 
+.title-panel {
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
+  padding: 0px;
+  margin: 0px 0px 15px 0px;
+  top: 0px;
+  left: 0px; }
+
+ul.title-panel-list {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px; }
+
+.left {
+  float: left; }
+
+.right {
+  float: right;
+  cursor: pointer; }
+
+.title {
+  margin: 15px 15px 10px 15px; }
+
+.menu {
+  margin: 15px 15px 10px 15px; }
+
+li.right:hover {
+  background-color: lightgrey; }
+
+.about-panel {
+  text-align: center; }
+
 .github-link {
   margin: 0px;
   padding: 0px;
-  position: sticky;
-  justify-content: center; }
+  justify-content: center;
+  text-decoration: none;
+  color: black; }
 
-.github-svg {
-  margin: 15px 10px 5px 10px;
-  width: 64px; }
+.github-icon {
+  margin: 5px;
+  font-size: 2em; }
+
+.menu-modal-content {
+  padding: 8px 0px;
+  margin: 0px;
+  position: absolute;
+  top: 25%;
+  width: 100%; }
+
+.menu-modal-overlay {
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */ }
+
+@media screen and (min-width: 576px) {
+  .menu-modal-content {
+    width: 500px;
+    left: calc((98% - 500px)/2); } }
