--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 .panel {
-  margin: 10px;
+  margin: 10px 0px;
   background-color: white;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   padding: 5px; }
@@ -74,10 +74,12 @@ input[type="file"] {
   /* Black w/ opacity */ }
 
 .modal-content {
+  position: fixed;
   background-color: white;
-  margin: 15% auto;
   padding: 20px;
-  width: 80%;
+  width: 100%;
+  left: 0;
+  top: 15%;
   outline: none; }
 
 @media screen and (min-width: 576px) {
@@ -86,6 +88,7 @@ input[type="file"] {
     margin: 15% auto;
     padding: 20px;
     width: 400px;
+    left: calc((98% - 400px)/2);
     outline: none; } }
 
 .pull-right {
@@ -93,30 +96,35 @@ input[type="file"] {
 
 @supports (display: grid) {
   @media screen and (min-width: 576px) {
+    .panel {
+      margin: 0px; }
     .site {
       display: grid;
+      grid-gap: 10px;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto;
-      grid-template-areas: "character character" "summary summary" "deed deed"; } }
+      grid-template-areas: "character character" "summary summary" "deed deed"; } }
   @media screen and (min-width: 768px) {
     .site {
       display: grid;
+      grid-gap: 15px;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto;
-      grid-template-areas: "character summary" "deed deed"; } }
+      grid-template-areas: "character summary" "deed deed"; } }
   @media screen and (min-width: 1024px) {
     .site {
       display: grid;
+      grid-gap: 20px;
       grid-template-columns: 1.4fr 1fr;
       grid-template-rows: auto;
-      grid-template-areas: "character summary" "deed deed"; } } }
+      grid-template-areas: "character summary" "deed deed"; } } }
 
 @font-face {
   font-family: 'lotro';
   src: url("./lotro.woff") format("woff"); }
 
 body {
-  margin: 0;
+  margin: 2%;
   padding: 0;
   font-family: 'lotro', sans-serif;
   background-color: #fff9ee; }
