--- a/src/common.scss
+++ b/src/common.scss
@@ -1,7 +1,7 @@
 // all common css tags
 
 //colors
-$fg-color: rgba(58, 58, 58, 0.788);
+$fg-color: #3a3a3ac9;
 $bg-color: rgb(255, 249, 238);
 $shadow: rgba(156, 156, 156, 0.788);
 $border: rgb(143, 118, 65);
